--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2364,7 +2364,7 @@
 		}
 
 			.main.style3 .content > header {
-				margin-bottom: 2em;
+				margin-bottom: 1em;
 			}
 
 			.main.style3.primary {
@@ -2381,7 +2381,7 @@
 		}
 		
 			.main.style4 .content > header {
-				margin-bottom: 2em;
+				margin-bottom: 1em;
 			}
 
 			.main.style4.primary {
